@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, Red Hat, Inc.. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,31 +23,39 @@
 
 /*
  * @test
- * @bug 8262891 8269354
- * @summary Test parenthesized pattern
- * @compile --enable-preview -source ${jdk.version} Parenthesized.java
- * @run main/othervm --enable-preview Parenthesized
+ * @bug 8269285
+ * @summary Crash/miscompile in CallGenerator::for_method_handle_inline after JDK-8191998
+ * @requires vm.compMode == "Xmixed" & vm.flavor == "server"
+ *
+ * @run main/othervm
+ *        -Xcomp -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,compiler.types.TestMethodHandleSpeculation::main
+ *        compiler.types.TestMethodHandleSpeculation
  */
-public class Parenthesized {
+
+package compiler.types;
+
+import java.io.Serializable;
+import java.util.Arrays;
+import java.util.function.Supplier;
+
+public class TestMethodHandleSpeculation {
+
     public static void main(String... args) {
-        new Parenthesized().run();
+        byte[] serObj = {1};
+        MyClass<byte[]> obj = new MyClass<>();
+        for (int i = 0; i < 100_000; i++) {
+            boolean test = obj.test(serObj);
+            if (test) {
+                throw new IllegalStateException("Cannot be null");
+            }
+        }
     }
 
-    void run() {
-        Object o = "";
-        switch (o) {
-            case (String s && s.isEmpty()) -> System.err.println("OK: " + s);
-            default -> throw new AssertionError();
+    static class MyClass<V extends Serializable> {
+        boolean test(V obj) {
+            Supplier<Boolean> supp = () -> (obj == null);
+            return supp.get();
         }
-        System.err.println(switch (o) {
-            case (String s && s.isEmpty()) -> "OK: " + s;
-            default -> throw new AssertionError();
-        });
-        if (o instanceof (String s && s.isEmpty())) {
-            System.err.println("OK: " + s);
-        }
-        boolean b1 = o instanceof (String s && s.isEmpty());
-        boolean b2 = o instanceof String s && s.isEmpty();
     }
 
 }
